# Aiken-Partisia_MPC

./: .env.example  .gitignore  MILESTONES.md  NEXT_SESSION.md  README.md
cardano/: README.md  aiken.toml  plutus.json
cardano/scripts/: deploy-m1.json  deploy-m1.ts  package-lock.json  package.json  tsconfig.json
cardano/tests/: test-results-m1.txt
cardano/validators/: profila_mpc.ak  profila_mpc_tests.ak
docs/: E2E-Technical-Test-Flow.md  closeout-video-script.md  milestone-1-summary.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  poc-evidence.html
docs/evidence/: closeout-report.json  e2e-run-log.json  generate-closeout-report-pdf.py  generate-m1-report-pdf.py  generate-m2-report-pdf.py  generate-m3-report-pdf.py  generate-m4-report-pdf.py  generate-signoff-pdf.py  m1-onchain-utxos.json  milestone-1-report.md  milestone-2-report.md  milestone-3-report.json  milestone-4-report.json
partisia/contracts/: Cargo.toml
partisia/contracts/profila_mpc/: Cargo.toml
partisia/contracts/profila_mpc/src/: contract.rs  zk_compute.rs
partisia/deploy/: deploy-m3.json  profila_mpc.abi  profila_mpc.pbc  profila_mpc.zkwa
partisia/tests/: test-results-m2.txt
relay/: generate_test_data.ts  m3-state-evidence.json  mpc-result.json  package-lock.json  package.json  relay-log.json  relay.ts  result-display.html  secret-submissions-log.json  show_result.ts  submit_secrets.ts  trigger-computation-log.json  trigger_computation.ts  tsconfig.json
test-data/: profila_test_users.json
